# SceneWorks

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODEGRAPH.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2026-07-01.md  CODE_REVIEW_2026-07-12.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pytest.ini
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  desktop-linux.yml  desktop-windows.yml  macos-mlx.yml  release.yml  server-candle-linux.yml  windows-candle.yml
apps/api/: README.md  requirements.txt
apps/desktop/: Cargo.toml  Entitlements.plist  README.md  build.rs  package-lock.json  package.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/docs/: offline-install.md
apps/desktop/licenses/: manifest.json
apps/desktop/licenses/acestep-v15-sft-cover/: MIT.txt
apps/desktop/licenses/cuda/: NOTICE.txt
apps/desktop/licenses/ffmpeg/: NOTICE.txt
apps/desktop/licenses/ltx-2.3/: Gemma-Terms.txt
apps/desktop/licenses/mmaudio/: Apple-ML-Research-License.txt  CC-BY-NC-4.0.txt  MIT.txt
apps/desktop/licenses/onnxruntime/: NOTICE.txt
apps/desktop/licenses/openvoice-v2/: MIT.txt
apps/desktop/permissions/autogenerated/: clear_remote_access_password.toml  get_desktop_trust_nonce.toml  get_gpu_telemetry.toml  get_lan_address.toml  get_remote_access.toml  save_image_export.toml  set_gpu_memory_limit.toml  set_remote_access.toml  set_remote_access_password.toml
apps/desktop/scripts/: build-sidecar-platform.mjs  build-sidecar-platform.test.mjs  build-sidecar.mjs  build-update-manifest.mjs  build-update-manifest.test.mjs  fetch-uv.mjs  linux-bundle-config.test.mjs  stage-ffmpeg.py  stage-onnxruntime-cuda.py  stage-onnxruntime.py  stage-python.mjs  stage-test-sidecars.mjs  staple-dmg.mjs
apps/desktop/src/: cred_ipc.rs  cuda_provision.rs  cuda_provision_check.rs  linux_cuda_provision.rs  main.rs  net.rs  settings.rs  setup.rs  update.rs  webkitgtk.rs
apps/desktop/ui/: index.html
apps/rust-api/: Cargo.toml  README.md  build.rs
apps/rust-api/src/: assets.rs  auth.rs  characters.rs  control_overlays.rs  defaults.rs  dto.rs  error.rs  events.rs  external_base_models.rs  external_loras.rs  generation.rs  ideogram.rs  jobs.rs  keypoints.rs  lib.rs  logs.rs  loras.rs  main.rs  manifest.rs  manifest_entity.rs  models.rs  poses.rs  preferences.rs  prompt_batches.rs  prompts.rs  recipe_presets.rs  saved_voices.rs  server.rs  styles.rs  tests.rs  training.rs  workers.rs
apps/rust-api/src/tests/: auth.rs  catalog.rs  jobs.rs  mcp.rs  media.rs  mod.rs  projects.rs  prompt_batches.rs  recipe_presets.rs  server.rs  support.rs  training.rs  uploads.rs
crates/sceneworks-core/: Cargo.toml
crates/sceneworks-core/src/: angle_kps.rs  app_paths.rs  asset_index.rs  base_weights.rs  builtin_manifests.rs  character_store.rs  contracts.rs  credentials.rs  dataset_quality.rs  external_roots.rs  hf_home.rs  ideogram_caption.rs  image_request.rs  jobs_store.rs  jsonc.rs  lib.rs  lora_family.rs  lora_url.rs  media_convert.rs  mlx_tier_completeness.rs  payload_util.rs  project_store.rs  session_log.rs  slug.rs  store_util.rs  style_composer.rs  time.rs  training.rs  training_store.rs  video_request.rs  voice_store.rs
crates/sceneworks-core/src/jobs_store/: routing.rs
crates/sceneworks-core/src/jobs_store/routing/: candle.rs  catalog.rs  gaps.rs  mlx.rs
crates/sceneworks-core/tests/: character_store.rs  contract_roundtrip.rs  jobs_store.rs  training_contracts.rs
crates/sceneworks-mcp/: Cargo.toml
crates/sceneworks-mcp/src/: api_client.rs  lib.rs  server.rs
crates/sceneworks-mcp/tests/: dns_rebinding_host.rs  generate_image_tool.rs  mcp_roundtrip.rs  video_job_tools.rs
docker/: api.Dockerfile  rust-api.Dockerfile  rust-worker.Dockerfile  rust.Dockerfile  web.Dockerfile  worker.Dockerfile
docs/: f-029-pin-migration-audit.md  face-likeness.md  mac-rust-gaps.md  mcp-server.md  model-download-receipts.md  observability.md  packaging-nc-weights-guard.md  rust-mlx-build.md  sc-3031-parity.md  sc-3633-mlx-port.md
documents/: APPLE_RUNTIME_FEASIBILITY.md  EPIC_DATASET_DOCTOR.md  EPIC_NATIVE_LTX23_VIDEO_ADAPTER.md  FFMPEG_TIMELINE_EXPORT_MVP.md  GOAL_OBSERVABILITY_FOUNDATIONS.md  IMAGE_MODEL_RESEARCH.md  IMPLEMENTATION_PLAN.md  MULTI_MODEL_REFERENCE_CONDITIONING.md  MULTI_REPO_REARCHITECTURE_PLAN.md  SCENEWORKS_PLAN.md  TRAINING_QUICKSTART.md  V1_RISK_REGISTER.md  VIDEO_MODEL_FEASIBILITY_MATRIX.md  ideogram-style-injection.fixtures.json  style-composer.fixtures.json  style.txt
scripts/: build_sdxl_turnkey.py  bump-inference.mjs  check-api.py  check-candle-build.mjs  check-compose-config.mjs  check-docker-api-runtime.mjs  check-docker-api-runtime.test.mjs  check-download-patterns.mjs  check-gen-core-skew.sh  check-neither-build.mjs  check-no-nc-weights.mjs  check-scaffold.mjs  e2e_lokr_sdxl.py  release.mjs  smoke-lens.ps1  spike_lokr_roundtrip.py  stop-sceneworks-dev.mjs  sync-version.mjs
scripts/spikes/sc3487_ort_pose/: Cargo.toml
scripts/spikes/sc3487_ort_pose/src/: detect.rs  probe.rs
tests/: conftest.py  rust_api_harness.py  test_assets.py  test_builtin_manifest_audit.py  test_characters.py  test_image_generation.py  test_instantid_adapter.py  test_jobs_store.py  test_kps_extract_adapters.py  test_mlx_flux_convert.py  test_models.py  test_person_adapters.py  test_person_tracking.py  test_pose_adapters.py  test_project_index.py  test_pulid_flux_adapter.py  test_python_rust_api_parity.py  test_rust_api_contract_snapshot_merge.py  test_rust_api_contract_snapshots.py  test_rust_api_worker_smoke.py  test_rust_migration_contract_fixtures.py  test_sampler_registry.py  test_worker_caption.py  test_worker_gpu.py  test_worker_image_adapters.py  test_worker_lora_adapters.py  test_worker_prompt_refine.py  test_worker_runtime.py  test_worker_runtime_core.py  test_worker_training.py  test_worker_video_adapters.py  worker_runtime_shared.py
(+703 files in other folders)
