[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "apps/rust-api",
    "apps/rust-worker",
    "crates/sceneworks-core",
    "crates/sceneworks-image-quality",
    "crates/sceneworks-mcp",
    "crates/sceneworks-worker",
]
# apps/desktop (Tauri) needs platform GUI libs (WebKit/GTK on Linux) and is built
# per-platform via `tauri build` on macOS/Windows — it is NOT shipped on Linux
# (Docker covers Linux). Excluding it from default-members keeps bare cargo and
# the Linux/server CI checks from trying to compile the GUI stack.
default-members = [
    "apps/rust-api",
    "apps/rust-worker",
    "crates/sceneworks-core",
    "crates/sceneworks-image-quality",
    "crates/sceneworks-mcp",
    "crates/sceneworks-worker",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license-file = "LICENSE"

# Shared logging backbone (observability foundations). `tracing` is the single
# logging facade for every Rust crate; `tracing-subscriber` installs the
# format-adaptive subscriber from `sceneworks_core::observability::init_logging`.
# Pinned once here so all crates resolve the same version and the JSON envelope
# stays consistent across the api / worker / desktop sidecars.
[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Cross-platform "send to the OS trash" (Windows Recycle Bin / macOS Trash / Linux
# XDG trash). Used so deleting a LoRA/model or purging an asset is recoverable from
# the operating system's trash instead of an irreversible unlink. Pinned once here so
# the api (sync helper) and core (project store purge) resolve the same version.
trash = "5"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

# Vendored multi-arch CUDA kernel override (sc-7544 / sc-13510). candle-kernels compiles the
# GGUF quant/moe kernels into a static `libmoe.a` of SASS with ONE `-gencode` derived from
# CUDA_COMPUTE_CAP — at the cap=80 packaging baseline that is an Ampere-only cubin with no PTX,
# so on Blackwell (sm_120) every quantized matmul silently returns zeros. The inference repo
# vendors candle-kernels with a multi-arch fatbin build.rs (sm_80 + sm_90 + sm_120 SASS +
# compute_120 PTX; see crates/media/candle-gen/vendor/candle-kernels/VENDORED.md there), but a
# Cargo `[patch]` only takes effect in the TOP-LEVEL workspace — inference's own patch does not
# apply when SceneWorks builds the graph, which is how the sc-7544 fix silently dropped out at
# the candle-gen -> inference cutover. This patch re-applies it for every SceneWorks build.
#
# The rev MUST stay in lockstep with the inference pins in crates/sceneworks-worker/Cargo.toml
# (scripts/bump-inference.mjs rewrites both; crates/sceneworks-worker/tests/
# candle_kernels_patch_guard.rs fails the build if they skew or the patch is dropped).
[patch."https://github.com/huggingface/candle"]
candle-kernels = { git = "https://github.com/SceneWorks/inference", rev = "58d9099303e431fa43ef83a9d96050e5f53bfcfe" }
