[package]
name = "sceneworks-rust-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
axum = "0.7"
sceneworks-core = { path = "../../crates/sceneworks-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.13"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
