[package]
name = "sceneworks-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
python-live = []

[lints]
workspace = true
